Fix styles for Sidebar theme and close button positioning on mobile view

--- a/docusaurus/src/scss/sidebar.scss
+++ b/docusaurus/src/scss/sidebar.scss
@@ -15,8 +15,6 @@ $selector-color-mode-toggle-wrapper: 'div[class*="ColorModeToggle"]';
       var(--ifm-navbar-padding-vertical)
       var(--custom-navbar-sidebar-horizontal-padding)
     ;
-
-    gap: var(--custom-navbar-items-gap);
   }
 
   &__back {
